--- a/YiJieTest/Assembly-CSharp.csproj
+++ b/YiJieTest/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Main.cs" />
+     <Compile Include="Assets\Scripts\MiniJson.cs" />
      <Compile Include="Assets\Scripts\SdkManager.cs" />
      <None Include="Assets\Plugins\Android\res\values\strings.xml" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
