--- a/YiJieTest/Assembly-CSharp.csproj
+++ b/YiJieTest/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Crc32Utils.cs" />
      <Compile Include="Assets\Scripts\Main.cs" />
      <Compile Include="Assets\Scripts\MiniJson.cs" />
      <Compile Include="Assets\Scripts\SdkManager.cs" />
